--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/app.js"
   },
+  "engines": {
+    "node": "12.16.3",
+    "npm": "6.14.4"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
